# ncube

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/common/: types.h  util.h
include/cube/: cube.h
include/graphics/: screen.h
include/shapes/: cube.h
scripts/: build.sh  clean.sh  config.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  util.cpp
src/cube/: CMakeLists.txt  cube.cpp
src/graphics/: CMakeLists.txt  screen.cpp
src/ncube/: CMakeLists.txt  ncube.cpp
src/nshapes/: CMakeLists.txt  nshapes.cpp
src/shapes/: CMakeLists.txt  cube.cpp
